# capstoneproject_2026F1

./: CLAUDE.md  README.md  REMOTE_PARKING_IMPLEMENTATION_GUIDE.md  SYSTEM_ANALYSIS.md  SYSTEM_OVERVIEW.md  Untitled Document 1  remote_parking_ui.py  setup_limo_humble_gazebo.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
src/limo_car/: CMakeLists.txt
src/limo_car/gazebo/: ackermann.xacro  ackermann_with_sensor.xacro  sensor.xacro
src/limo_gazebosim/: CMakeLists.txt
src/limo_gazebosim/launch/: limo_ackermann_rviz.launch.py
src/limo_gazebosim/scripts/: download_parking_garage_model.sh  scale_vehicle_models.py  setup_scaled_vehicle_models.py  start_parking_limo_master.sh
src/limo_gazebosim/worlds/: parking_lot.world  parking_lot_scaled_vehicles.world
src/my_valet_parking/: package.xml  setup.cfg  setup.py
src/my_valet_parking/my_valet_parking/: car_exit_controller.py  dynamic_tracker_node.py  limo2_arrow_teleop.py  limo2_exit_handler.py  (+5 more)
src/remote_parking_manager/: package.xml  setup.cfg  setup.py
src/remote_parking_manager/remote_parking_manager/: hybrid_astar_planner.py  mission_manager.py
src/remote_parking_world/: CMakeLists.txt
src/remote_parking_world/launch/: spawn_robots.launch.py  world_server.launch.py
src/remote_parking_world/models/static_limo/: model.config  model.sdf
src/remote_parking_world/scripts/: reset_robots.sh  select_car.sh
src/remote_parking_world/urdf/: limo_kinematic.urdf.xacro  limo_with_rear_camera.urdf.xacro
src/remote_parking_world/worlds/: remote_parking_static.world
(+249 files in other folders)
